# FPLOracle

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
init-db/: 001_schema.sql  002_views.sql
src/fpl_oracle/: cache.py  config.py  db.py  fpl_api.py  log.py  models.py  server.py  sync.py
src/fpl_oracle/analytics/: chips.py  clean_sheets.py  fixtures.py  form.py  hits.py  optimizer.py  ownership.py  scoring.py  venue.py  xpts.py
src/fpl_oracle/enrichment/: fbref.py  matcher.py  understat.py
src/fpl_oracle/tools/: __init__.py  captaincy.py  defensive.py  fixtures_tools.py  live.py  manager.py  opponent.py  ownership_tools.py  planning.py  players.py  rankings.py  regression.py  rotation.py  set_pieces.py  squad_builder.py  team_tools.py  venue_tool.py  xcs_tool.py
