[project]
name = "fpl-oracle"
version = "1.0.0"
description = "FPL analytics MCP server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "uvicorn>=0.34.0",
    "understatapi>=0.6.0",
    "soccerdata>=1.0.0",
    "pulp>=2.9.0",
    "numpy>=2.0.0",
    "cachetools>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpl_oracle"]

[dependency-groups]
dev = ["ruff>=0.9.0"]
